--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-scripts": "3.4.4",
@@ -34,7 +35,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.11.0",
+    "eslint": "^6.6.0",
     "eslint-plugin-react": "^7.21.5"
   }
 }
