--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
-    "material-icons-react": "^1.0.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-icons": "^3.11.0",
     "react-scripts": "3.4.4",
     "styled-components": "^5.2.0"
   },
