--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "NODE_ICU_DATA=node_modules/full-icu react-scripts test",
     "lint": "eslint .",
     "eject": "react-scripts eject"
   },
@@ -40,6 +40,7 @@
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
+    "full-icu": "^1.3.1",
     "prettier": "^2.1.2"
   }
 }
