--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "carrinho-compras",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://fabiomferreira.github.io/carrinho-compras",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -19,7 +20,9 @@
     "build": "react-scripts build",
     "test": "NODE_ICU_DATA=node_modules/full-icu react-scripts test",
     "lint": "eslint .",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +45,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "full-icu": "^1.3.1",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.1.2"
   }
 }
